Removed unused code from .header class indicating right and left header on main page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="icon" type="image/png" href="img/icons8-website-64.png">
+    <link rel="icon" type="image.png" href="img/icons8-website-64.png">
     <link rel="stylesheet" href="styles/styles.css" />
     <link
       rel="stylesheet"
@@ -215,7 +215,7 @@
         <div class="portfolios">
           <div class="portfolio-item">
             <div class="image">
-              <img src="/img/form-port.jpg " alt="" />
+              <img src="img/form-port.jpg" alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
@@ -228,7 +228,7 @@
             </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="/img/quote-port.jpg " alt="" />
+              <img src="img/quote-port.jpg " alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
@@ -241,7 +241,7 @@
             </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="/img/math-port.jpg " alt="" />
+              <img src="img/math-port.jpg " alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
@@ -254,7 +254,7 @@
             </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="/img/nasa-port.jpg " alt="" />
+              <img src="img/nasa-port.jpg " alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
@@ -267,7 +267,7 @@
             </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="/img/bookmark-port.jpg " alt="" />
+              <img src="img/bookmark-port.jpg " alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
@@ -280,7 +280,7 @@
             </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="/img/todo-port.jpg " alt="" />
+              <img src="img/todo-port.jpg " alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
