Minor alterations to layout

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
             <h5>Adaptability</h5>
             <p>
-              As developers we must use a model of continuous learning, to stay up to date with new features available to us in either new technologies, or what we currently use.  It behooves to do what’s best for the software, so that we can do what is best for our customers.
+              As developers we must use a model of continuous learning, to stay up to date with new features available to us in either new technologies, or what we currently use.  It behooves us to do what’s best for the software, so that we can do what is best for our customers.
             </p>
           </div>
         </div>
