--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="right-about">
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">25+</p>
+                <p class="large-text">35+</p>
                 <p class="small-text">
                   Projects <br />
                   Completed
@@ -61,7 +61,7 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">10+</p>
+                <p class="large-text">100%</p>
                 <p class="small-text">
                   Happy <br />
                   Clients
@@ -70,10 +70,10 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">25+</p>
+                <p class="large-text">100%</p>
                 <p class="small-text">
-                  Projects <br />
-                  Completed
+                  Still <br />
+                  Learning
                 </p>
               </div>
             </div>
@@ -104,7 +104,7 @@
             <div class="progress-bar">
               <p class="progress-title">JavaScript</p>
               <div class="progress-container">
-                <p class="progress-text">70%</p>
+                <p class="progress-text">80%</p>
                 <div class="progress">
                   <span class="js"></span>
                 </div>
@@ -220,7 +220,7 @@
             <div class="hover-items">
               <h3>Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="https://github.com/RMRKBL/Form-Validator.git" class="icon">
                   <i class="fa-brands fa-github"></i>
                 </a>
                 </div>
@@ -233,7 +233,7 @@
             <div class="hover-items">
               <h3>Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="https://github.com/RMRKBL/Quote-Generator.git" class="icon">
                   <i class="fa-brands fa-github"></i>
                 </a>
                 </div>
@@ -241,12 +241,12 @@
             </div>
           <div class="portfolio-item">
             <div class="image">
-              <img src="img/math-port.jpg " alt="" />
+              <img src="img/scroll-port.jpg " alt="" />
             </div>
             <div class="hover-items">
               <h3>Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="https://github.com/RMRKBL/Infinite-Scroll.git" class="icon">
                   <i class="fa-brands fa-github"></i>
                 </a>
                 </div>
@@ -259,7 +259,7 @@
             <div class="hover-items">
               <h3>Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="https://github.com/RMRKBL/NASA-api.git" class="icon">
                   <i class="fa-brands fa-github"></i>
                 </a>
                 </div>
@@ -272,7 +272,7 @@
             <div class="hover-items">
               <h3>Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="https://github.com/RMRKBL/Bookmark.git" class="icon">
                   <i class="fa-brands fa-github"></i>
                 </a>
                 </div>
@@ -285,7 +285,7 @@
             <div class="hover-items">
               <h3>Source</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a href="https://github.com/RMRKBL/To-Do.git" class="icon">
                   <i class="fa-brands fa-github"></i>
                 </a>
                 </div>
@@ -306,7 +306,7 @@
               <img src="img/code-blog.jpg" alt="">
               <div class="blog-text">
                 <h4>I Can't Focus</h4>
-                <p>Developing focus is difficult, especially with so many different stimuli available at our fingertips.  However it is incumbent upon those who would like to see some form success in anything they pursue to do so.  Deep meaningful strives are all accomplished through intentional practice and application... </p>
+                <p>Developing focus is difficult, especially with so many different stimuli available at our fingertips.  However it is incumbent upon those who would like to see some form success in anything they pursue to do so.  Deep meaningful strives are all accomplished through intentional practice and application, along with patience and discipline which will undoubtedly yield prgress. "Be so good they can't ignore you." - Steve Martin </p>
               </div>
             </div>
           </div>
@@ -324,7 +324,7 @@
               <img src="img/proj-blog.jpg" alt="">
               <div class="blog-text">
                 <h4>Building Projects</h4>
-                <p>When it comes to building projects it's best to work on multiple types, from games to websites and apps.  This will give you more experience and a wider</p>
+                <p>When it comes to building projects it's best to work on multiple types, from games to websites and apps using vanilla methods as well as frameworks and libraries.  This will give you more experience and a wider variety of skills, though you won't be able to remember everything you do or come across.  Patterns will start to arise, allowing you to better understand and remedy issues along with having an arsenal of tools, technologies, and techniques at your disposal for future projects. "It's what you practice in private that you will be rewarded for in public." - Anthony Robbins</p>
               </div>
             </div>
           </div>
@@ -342,7 +342,7 @@
               <img src="img/grad-blog.jpg" alt="">
               <div class="blog-text">
                 <h4>Degree Or Not</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam odio voluptas nesciunt eum nobis laudantium fugit cum eaque alias aspernatur laboriosam aut, praesentium voluptates minus quo fuga! Est, officiis nobis.</p>
+                <p>A degree is important depending on the career you choose to pursue, however in software development that statement is far from true.  I've heard of the IT field being compared to a trade, this seems a more befitting likening.  It's not the easiest thing however, if effort is put forth, like all things the outcome will be favorable.  Like building a community in college it can be done through things like meet-ups, open source software, social media, and events.  If you choose to go to college it isn't an easier road as much as it's another option. "Don't confuse not having a degree with not having intelligence" - Dad </p>
               </div>
             </div>
           </div>
@@ -365,7 +365,7 @@
           <div class="contact-content-container">
             <div class="left-contact">
               <h4>Contact me here</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cupiditate quasi quae architecto! Tempore possimus quae optio sequi temporibus sed enim, accusantium quibusdam numquam in dolor sit deleniti nisi animi?</p>
+              <p>Below is a list of the best methods of contact. <br> Please feel free to contact me!</p>
               <div class="contact-info">
                 <div class="contact-item">
                   <div class="icon">
@@ -397,17 +397,17 @@
               </div>
               <div class="contact-icons">
                 <div class="contact-icon">
-                  <a href="www.twitter.com" target="_blank">
+                  <a href="https://twitter.com/AlexanderTajh" target="_blank">
                     <i class="fa-brands fa-twitter"></i>
                   </a>
                 </div>
                 <div class="contact-icon">
-                  <a href="www.linkedin.com" target="_blank">
+                  <a href="https://www.linkedin.com/in/tajh-a-johnson-b0b79472/" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                   </a>
                 </div>
                 <div class="contact-icon">
-                  <a href="www.github.com" target="_blank">
+                  <a href="https://github.com/RMRKBL" target="_blank">
                     <i class="fa-brands fa-github"></i>
                   </a>
                 </div>
@@ -426,9 +426,9 @@
                   <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                 </div>
                 <div class="submit-btn">
-                  <a href="" class="main-btn">
-                    <span class="btn-text">Email Me</span>
-                    <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+                  <a href="https://johnson.tajh11@gmail.com" class="main-btn">
+                    <span class="btn-text">Download Resume</span>
+                    <span class="btn-icon"><class class="fa-solid fa-download"></class></span>
                   </a>
                 </div>
               </form>
