Updated about image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="about-container">
           <div class="left-about">
             <div class="image">
-              <img src="img/main-img.JPG" alt="" />
+              <img src="img/main-port-img.JPG" alt="" />
             </div>
             <h2 class="name">Tajh A. Johnson</h2>
             <p>
@@ -296,7 +296,7 @@
       </section>
 
       <!-- Blogs Section -->
-      <section class="section sec4 " id="blogs">
+      <!-- <section class="section sec4 " id="blogs">
         <div class="main-title">
           <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
         </div>
@@ -351,12 +351,12 @@
               <img src="img/bar-blog.jpg" alt="">
               <div class="blog-text">
                 <h4>Work History</h4>
-                <p>I've had many jobs in different fields throughout my short 12 years of working.  I've been a contractor apprentice, kickboxing instructor, bartender, student loan officer, car salesmen, mail man, and even joined the Army.  The list goes on, and the one thing that has been clear is if it can be done we can do most likely do it given time and intentional practice.  experience is the best teacher, and you gain so many skills and lessons trying a myriad of different things with your life.  “Intelligence is the ability to adapt to change.” - Stephen Hawking</p>
+                <p>I've had many jobs in different fields throughout my short 12 years of working.  I've been a contractor apprentice, kickboxing instructor, bartender, student loan officer, car salesmen, mail man, and even joined the Army.  The list goes on, and the one thing that has been clear is if it can be done we can most likely do it given time and intentional practice.  Experience is the best teacher, and you gain so many skills and lessons trying a myriad of different things with your life.  “Intelligence is the ability to adapt to change.” - Stephen Hawking</p>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
     
       <section class="section sec5 contact" id="contact">
         <div class="main-title">
@@ -431,6 +431,7 @@
                     <span class="btn-icon"><class class="fa-solid fa-download"></class></span>
                   </a>
                 </div>
+                
               </form>
             </div>
           </div>
@@ -447,9 +448,9 @@
       <div class="control control-3" data-id="portfolio">
         <i class="fa-solid fa-briefcase"></i>
       </div>
-      <div class="control control-4" data-id="blogs">
+      <!-- <div class="control control-4" data-id="blogs">
         <i class="fa-solid fa-newspaper"></i>
-      </div>
+      </div> -->
       <div class="control control-5" data-id="contact">
         <i class="fa-solid fa-envelope-open"></i>
       </div>
